Fixed fish code (10 show up now)